--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,8 +1,12 @@
 {
 	"compilerOptions": {
-		"allowJs": true,
-		"baseUrl": "../node_modules",
-		"types": ["cypress"]
+	  "allowJs": true,
+	  "baseUrl": "../node_modules",
+	  "types": [
+		"cypress"
+	  ]
 	},
-	"include": ["**/*.*"]
-}
+	"include": [
+	  "**/*.*"
+	]
+  }
